@@ -2,6 +2,10 @@
 
   Users side :
   ------------
+    # The settings ALLOWED_IMAGES_EXTENSIONS & ALLOWED_EXTENSIONS have been cleaned.
+        - ".webp" has been added has allowed extension for images.
+        - ".psd" & ".tga" are not used as image anymore.
+        - ".js" & other code extensions have been removed.
     # An useless/empty message panel in the errors-popup for bulk-update has been removed.
     # Apps :
         * Activities :
